services/monitoring/resources/networkpolicy/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: monitoring
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager-prometheus-stack-kube-prom-alertmanager-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      alertmanager: prometheus-stack-kube-prom-alertmanager
      app.kubernetes.io/instance: prometheus-stack-kube-prom-alertmanager
      app.kubernetes.io/managed-by: prometheus-operator
      app.kubernetes.io/name: alertmanager
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
            tailscale.com/parent-resource: prometheus-stack-kube-prom-alertmanager
            tailscale.com/parent-resource-ns: monitoring
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alloy-gateway-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: alloy-gateway
      app.kubernetes.io/name: alloy
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "3500"
              protocol: TCP
            - port: "5514"
              protocol: UDP
            - port: "5601"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
            tailscale.com/parent-resource: alloy-gateway-push
            tailscale.com/parent-resource-ns: monitoring
      toPorts:
        - ports:
            - port: "3500"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: single-binary
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: loki
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: crowdsec
            k8s-app: crowdsec
            type: agent
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-prometheus-stack-kube-prom-prometheus-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
            tailscale.com/parent-resource: prometheus-stack-kube-prom-prometheus
            tailscale.com/parent-resource-ns: monitoring
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kromgo
            app.kubernetes.io/name: kromgo
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-stack-grafana-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus-stack
      app.kubernetes.io/name: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-stack-kube-prom-operator-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: kube-prometheus-stack-operator
      release: prometheus-stack
  ingress:
    - fromEntities:
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: thanos-querier-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: thanos-querier
      app.kubernetes.io/instance: thanos-querier
      app.kubernetes.io/name: thanos-querier
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: astro-processing
            app.kubernetes.io/name: astro-stacker
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
